deploy: ccc6a7cd737c8c4aed8256c23e55364b3d210674

--- a/ch08/note07.html
+++ b/ch08/note07.html
@@ -584,7 +584,7 @@ x &amp; 1 &amp; 0 &amp; 0\\
 {E_2 = \alpha + 0.618\beta} \\
 {E_3 = \alpha - 0.618\beta} \\
 {E_4 = \alpha - 1.618\beta \hspace{0.5cm}\textnormal{(highest energy)}}\end{split}\]</div>
-<p><img alt="" src="../_images/Huckel2.png" /></p>
+<p><img alt="" src="../_images/c4MOs.png" /></p>
 <p>There are four <span class="math notranslate nohighlight">\(\pi\)</span> electrons, which occupy the two lowest energy
 orbitals. This gives the total <span class="math notranslate nohighlight">\(\pi\)</span> electronic energy for the molecule:</p>
 <div class="math notranslate nohighlight">
@@ -622,7 +622,7 @@ orbitals. This gives the total <span class="math notranslate nohighlight">\(\pi\
 {E_2 = E_3 = \alpha + \beta} \\
 {E_4 = E_5 = \alpha - \beta} \\
 {E_6 = \alpha - 2\beta~~\textnormal{(highest energy)}}\end{split}\]</div>
-<p><img alt="" src="../_images/Huckel3.png" /></p>
+<p><img alt="" src="../_images/benzeneMos.png" /></p>
 </section>
 </section>
 
