deploy: ae089795ee75b418f4ef271a767d411f875d2e34

--- a/math/note01.html
+++ b/math/note01.html
@@ -494,7 +494,7 @@ document.write(`
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-right"><p><span class="math notranslate nohighlight">\(x^n\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(\dfrac{x^{n+1}}{n+1}+C\)</span></p></td>
+<td class="text-left"><p><span class="math notranslate nohighlight">\(\dfrac{x^{n+1}}{n+1} + C\)</span></p></td>
 <td class="text-right"><p><span class="math notranslate nohighlight">\(\dfrac{1}{x}\)</span></p></td>
 <td class="text-left"><p><span class="math notranslate nohighlight">\(\ln\lvert x \rvert + C\)</span></p></td>
 </tr>
@@ -507,16 +507,6 @@ document.write(`
 <td class="text-left"><p><span class="math notranslate nohighlight">\(-\cos x + C\)</span></p></td>
 <td class="text-right"><p><span class="math notranslate nohighlight">\(\cos x\)</span></p></td>
 <td class="text-left"><p><span class="math notranslate nohighlight">\(\sin x + C\)</span></p></td>
-</tr>
-<tr class="row-odd"><td class="text-right"><p><span class="math notranslate nohighlight">\(\sec^2 x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(\tan x + C\)</span></p></td>
-<td class="text-right"><p><span class="math notranslate nohighlight">\(csc^2 x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(-\cot x + C\)</span></p></td>
-</tr>
-<tr class="row-even"><td class="text-right"><p><span class="math notranslate nohighlight">\(\sec x\tan x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(\sec x + C\)</span></p></td>
-<td class="text-right"><p><span class="math notranslate nohighlight">\(\csc x\cot x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(-\csc x + C\)</span></p></td>
 </tr>
 <tr class="row-odd"><td class="text-right"><p><span class="math notranslate nohighlight">\(\dfrac{1}{x^2 + a^2}\)</span></p></td>
 <td class="text-left"><p><span class="math notranslate nohighlight">\(\dfrac{1}{a}\arctan \left(\dfrac{x}{a}\right) + C\)</span></p></td>
@@ -583,14 +573,14 @@ document.write(`
 </tr>
 </thead>
 <tbody>
-<tr class="row-even"><td class="text-right"><p><strong>Fundamental theorem of calculus I</strong> <br/> (<span class="math notranslate nohighlight">\(f\)</span> is continuous on <span class="math notranslate nohighlight">\([a,b]\)</span>)</p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(g(x) = \displaystyle\int_a^x f(t) \ dt \newline g'(x) = f(x)\)</span></p></td>
+<tr class="row-even"><td class="text-right"><p><strong>Fundamental Theorem of Calculus I</strong> <br/> (If <span class="math notranslate nohighlight">\(f\)</span> is continuous on <span class="math notranslate nohighlight">\([a,b]\)</span>)</p></td>
+<td class="text-left"><p><span class="math notranslate nohighlight">\(g(x) = \displaystyle\int_a^x f(t) \, dt\)</span> <br/> <span class="math notranslate nohighlight">\(g'(x) = f(x)\)</span></p></td>
 </tr>
-<tr class="row-odd"><td class="text-right"><p><strong>Fundamental theorem of calculus II</strong> <br/> (<span class="math notranslate nohighlight">\(f\)</span> is continuous on <span class="math notranslate nohighlight">\([a,b]\)</span>)</p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(\displaystyle\int_a^b f(x) \ dx = F(b) - F(a)\)</span> <br/> where <span class="math notranslate nohighlight">\(F\)</span> is any antiderivative of <span class="math notranslate nohighlight">\(f\)</span></p></td>
+<tr class="row-odd"><td class="text-right"><p><strong>Fundamental Theorem of Calculus II</strong> <br/> (If <span class="math notranslate nohighlight">\(f\)</span> is continuous on <span class="math notranslate nohighlight">\([a,b]\)</span>)</p></td>
+<td class="text-left"><p><span class="math notranslate nohighlight">\(\displaystyle\int_a^b f(x) \, dx = F(b) - F(a)\)</span> <br/> where <span class="math notranslate nohighlight">\(F\)</span> is any antiderivative of <span class="math notranslate nohighlight">\(f\)</span></p></td>
 </tr>
-<tr class="row-even"><td class="text-right"><p>Net change theorem <br/> The integral of a rate of change is the net change</p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(\displaystyle\int_a^b F'(x) \ dx = F(b) - F(a)\)</span></p></td>
+<tr class="row-even"><td class="text-right"><p><strong>Net Change Theorem</strong> <br/> (The integral of a rate of change is the net change)</p></td>
+<td class="text-left"><p><span class="math notranslate nohighlight">\(\displaystyle\int_a^b F'(x) \, dx = F(b) - F(a)\)</span></p></td>
 </tr>
 </tbody>
 </table>
