--- a/math/note02.html
+++ b/math/note02.html
@@ -562,43 +562,23 @@ document.write(`
 <td class="text-right"><p><span class="math notranslate nohighlight">\(x^n\)</span></p></td>
 <td class="text-left"><p><span class="math notranslate nohighlight">\(nx^{n-1}\)</span></p></td>
 </tr>
-<tr class="row-odd"><td class="text-right"><p><span class="math notranslate nohighlight">\(x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(1\)</span></p></td>
-<td class="text-right"><p><span class="math notranslate nohighlight">\(\lvert x \rvert\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(\dfrac{x}{\lvert x \rvert}\)</span></p></td>
-</tr>
-<tr class="row-even"><td class="text-right"><p><span class="math notranslate nohighlight">\(e^x\)</span></p></td>
+<tr class="row-odd"><td class="text-right"><p><span class="math notranslate nohighlight">\(e^x\)</span></p></td>
 <td class="text-left"><p><span class="math notranslate nohighlight">\(e^x\)</span></p></td>
 <td class="text-right"><p><span class="math notranslate nohighlight">\(\ln x\)</span></p></td>
 <td class="text-left"><p><span class="math notranslate nohighlight">\(\dfrac{1}{x}\)</span></p></td>
 </tr>
-<tr class="row-odd"><td class="text-right"><p><span class="math notranslate nohighlight">\(a^x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(a^x\ln(a)\)</span></p></td>
-<td class="text-right"><p><span class="math notranslate nohighlight">\(\log_{a}x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(\dfrac{1}{x\ln(a)}\)</span></p></td>
-</tr>
 <tr class="row-even"><td class="text-right"><p><span class="math notranslate nohighlight">\(\sin x\)</span></p></td>
 <td class="text-left"><p><span class="math notranslate nohighlight">\(\cos x\)</span></p></td>
-<td class="text-right"><p><span class="math notranslate nohighlight">\(\sec x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(\sec x \tan x\)</span></p></td>
-</tr>
-<tr class="row-odd"><td class="text-right"><p><span class="math notranslate nohighlight">\(\cos x\)</span></p></td>
+<td class="text-right"><p><span class="math notranslate nohighlight">\(\cos x\)</span></p></td>
 <td class="text-left"><p><span class="math notranslate nohighlight">\(-\sin x\)</span></p></td>
-<td class="text-right"><p><span class="math notranslate nohighlight">\(\csc x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(-\csc x \cot x\)</span></p></td>
 </tr>
-<tr class="row-even"><td class="text-right"><p><span class="math notranslate nohighlight">\(\tan x\)</span></p></td>
+<tr class="row-odd"><td class="text-right"><p><span class="math notranslate nohighlight">\(\tan x\)</span></p></td>
 <td class="text-left"><p><span class="math notranslate nohighlight">\(\sec^2 x\)</span></p></td>
-<td class="text-right"><p><span class="math notranslate nohighlight">\(\cot x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(-\csc^2 x\)</span></p></td>
-</tr>
-<tr class="row-odd"><td class="text-right"><p><span class="math notranslate nohighlight">\(\arcsin x\)</span></p></td>
+<td class="text-right"><p><span class="math notranslate nohighlight">\(\arcsin x\)</span></p></td>
 <td class="text-left"><p><span class="math notranslate nohighlight">\(\dfrac{1}{\sqrt{1-x^2}}\)</span></p></td>
-<td class="text-right"><p><span class="math notranslate nohighlight">\(\arctan x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(\dfrac{1}{1+x^2}\)</span></p></td>
 </tr>
-<tr class="row-even"><td class="text-right"><p><span class="math notranslate nohighlight">\(\arccos x\)</span></p></td>
-<td class="text-left"><p><span class="math notranslate nohighlight">\(\dfrac{-1}{\sqrt{1-x^2}}\)</span></p></td>
+<tr class="row-even"><td class="text-right"><p><span class="math notranslate nohighlight">\(\arctan x\)</span></p></td>
+<td class="text-left"><p><span class="math notranslate nohighlight">\(\dfrac{1}{1+x^2}\)</span></p></td>
 <td class="text-right"><p></p></td>
 <td class="text-left"><p></p></td>
 </tr>
