--- a/ch01/note02.html
+++ b/ch01/note02.html
@@ -621,8 +621,9 @@ document.write(`
 <div class="math notranslate nohighlight">
 \[\boxed{E= h\nu}\]</div>
 <ul class="simple">
-<li><p>Unit of planck constant, <span class="math notranslate nohighlight">\(h = 6.63 10^{–34} J s\)</span></p></li>
-<li><p>Unit of frequency <span class="math notranslate nohighlight">\(\nu\)</span>, <span class="math notranslate nohighlight">\(s^{-1}\)</span>.</p></li>
+<li><p>Unit of Planck’s constant, <span class="math notranslate nohighlight">\(h = 6.63 10^{–34} J \cdot s\)</span></p></li>
+<li><p>Unit of frequency <span class="math notranslate nohighlight">\(\nu\)</span>, <span class="math notranslate nohighlight">\(1 s^{-1}\)</span>.</p></li>
+<li><p>Unit of frequency <span class="math notranslate nohighlight">\(\nu\)</span>, <span class="math notranslate nohighlight">\(1 J\)</span>.</p></li>
 </ul>
 </div>
 <ul class="simple">
