--- a/ch01/note02.html
+++ b/ch01/note02.html
@@ -576,20 +576,17 @@ document.write(`
 <li><p>One can fit more of high fequency (short wavelength) waves in the box than small frequency ones. The number of waves we can fit in a cubic box in the frequency region <span class="math notranslate nohighlight">\([\nu, \nu+d\nu]\)</span> can be estimated to be <span class="math notranslate nohighlight">\(\sim d \nu^3 \sim \nu^2 d\nu\)</span>. Constant of proportionality require a few more steps to derive which we skip and write final result:</p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[dN_{\nu }= \frac{8\pi}{c^3}\nu^2 d\nu\]</div>
+\[dN_{\nu }= \frac{8\pi}{c^3}\cdot nu^2 d\nu\]</div>
 <ul class="simple">
-<li><p>From thermodynamics we know that in equilibrium each degree of freedom or each oscillator gets the same <span class="math notranslate nohighlight">\(k_BT\)</span> of energy where <span class="math notranslate nohighlight">\(k_B\)</span> is the Boltzman’s constant you probably have seen in your thermodynamics class.</p></li>
+<li><p>From thermodynamics we know that in equilibrium each degree of freedom or each oscillator gets the same <span class="math notranslate nohighlight">\(k_BT\)</span> of energy where <span class="math notranslate nohighlight">\(k_B\)</span> is the Boltzman’s constant.
+$<span class="math notranslate nohighlight">\(\langle E\rangle = k_BT\)</span>$</p></li>
+<li><p>Every vibrating spring in heated body has same energy regardless of frequency, think about this assumption for a sec</p></li>
+<li><p>Distribution of radiated frequencies is then product of average thermla energy and number of springs in a frequency interval</p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[\langle E\rangle = k_BT\]</div>
+\[\rho({\nu}) =  k_B T \cdot \frac{8\pi}{c^3}\nu^2\]</div>
 <ul class="simple">
-<li><p>Thus the distribution of radiation energy is:</p></li>
-</ul>
-<div class="math notranslate nohighlight">
-\[\rho({\nu}) = \langle E\rangle \cdot  dN_{\nu}=  k_B T \cdot \frac{8\pi}{c^3}\nu^2\]</div>
-<ul class="simple">
-<li><p>Energy distribution shoots to infinity at high <span class="math notranslate nohighlight">\(\nu\)</span> (or low <span class="math notranslate nohighlight">\(\lambda\)</span>). This is known as the ultraviolet catastrophe!</p></li>
-<li><p>If you integrate <span class="math notranslate nohighlight">\(\rho\)</span> over all frequencies it will give you a total amount of radiation which in this case will be infinite! A light bulb can destroy the universe! Something is off with our classical prediction.</p></li>
+<li><p>Energy distribution shoots to infinity at high <span class="math notranslate nohighlight">\(\nu\)</span> (or low <span class="math notranslate nohighlight">\(\lambda\)</span>). This is known as the ultraviolet catastrophe! If you integrate <span class="math notranslate nohighlight">\(\rho\)</span> over all frequencies it will give you a total amount of radiation which in this case will be infinite! A light bulb can destroy the universe! Something is off with our classical prediction.</p></li>
 </ul>
 <div class="dropdown admonition">
 <p class="admonition-title">Quiz</p>
