deploy: 315bb6af63b7363eb4792f9d4f58f2329e448874

--- a/ch01/note02.html
+++ b/ch01/note02.html
@@ -567,21 +567,16 @@ document.write(`
 </figure>
 <p><strong>How classical mechanics describes temperature and radiation</strong></p>
 <ul class="simple">
-<li><p>What is “temperature”? A measure for kinetic energy per particle associated with translational, rotational, vibrational degrees of freedom.</p></li>
-<li><p>What is light? Think of an oscillating spring with frequency <span class="math notranslate nohighlight">\(\nu\)</span></p></li>
-<li><p>In thermodynamic equilibrium, each degree of freedom in our case each spring or oscillator gets the same thermal energy <span class="math notranslate nohighlight">\(k_B T\)</span>.</p></li>
-</ul>
-<hr class="docutils" />
-<ul class="simple">
-<li><p>One can fit more of high fequency (short wavelength) waves in the box than small frequency ones. The number of waves we can fit in a cubic box in the frequency region <span class="math notranslate nohighlight">\([\nu, \nu+d\nu]\)</span> can be estimated to be <span class="math notranslate nohighlight">\(\sim d \nu^3 \sim \nu^2 d\nu\)</span>. Constant of proportionality require a few more steps to derive which we skip and write final result:</p></li>
+<li><p><strong>What is radiation in classical mechanics?</strong> Radiation is considered a wave with frequency <span class="math notranslate nohighlight">\(\nu\)</span>. In a heated body, naturally vibrating springs (which represent atoms or molecules) generate waves with the same frequency.</p></li>
+<li><p><strong>Packing wave modes in a box</strong> One can fit more of high fequency (short wavelength) waves in the box than small frequency ones. The number of waves we can fit in a cubic box in the frequency region <span class="math notranslate nohighlight">\([\nu, \nu+d\nu]\)</span> can be estimated to be <span class="math notranslate nohighlight">\(\sim d \nu^3 \sim \nu^2 d\nu\)</span>. Constant of proportionality requires a few more steps to derive which we skip and write final result:</p></li>
 </ul>
 <div class="math notranslate nohighlight">
 \[dN_{\nu }= \frac{8\pi}{c^3}\cdot nu^2 d\nu\]</div>
 <ul class="simple">
-<li><p>From thermodynamics we know that in equilibrium each degree of freedom or each oscillator gets the same <span class="math notranslate nohighlight">\(k_BT\)</span> of energy where <span class="math notranslate nohighlight">\(k_B\)</span> is the Boltzman’s constant.
+<li><p><strong>Equipartition of energy</strong> From thermodynamics we know that in equilibrium each degree of freedom or each oscillator gets the same <span class="math notranslate nohighlight">\(k_BT\)</span> of energy where <span class="math notranslate nohighlight">\(k_B\)</span> is the Boltzman’s constant.
 $<span class="math notranslate nohighlight">\(\langle E\rangle = k_BT\)</span>$</p></li>
-<li><p>Every vibrating spring in heated body has same energy regardless of frequency, think about this assumption for a sec</p></li>
-<li><p>Distribution of radiated frequencies is then product of average thermla energy and number of springs in a frequency interval</p></li>
+<li><p>Every vibrating spring in heated body thus has same energy regardless of frequency, think about this assumption for a sec!</p></li>
+<li><p><strong>Radiation Energy Distribution:</strong> Distribution of radiated frequencies is then product of average thermal energy and number of springs in a frequency interval</p></li>
 </ul>
 <div class="math notranslate nohighlight">
 \[\rho({\nu}) =  k_B T \cdot \frac{8\pi}{c^3}\nu^2\]</div>
