deploy: 15ee74161f917dbc855e8a6c3fae67e65c1ce42d

--- a/ch01/note02.html
+++ b/ch01/note02.html
@@ -668,7 +668,9 @@ For the geometric series of the form:</p>
 </ul>
 <div class="math notranslate nohighlight">
 \[ \rho_{\nu}(T) = \frac{8\pi \nu^2}{c^3} \cdot \Big[\frac{1}{e^{\frac{h\nu}{kT}} - 1} \Big]\]</div>
-<p>You can also express distribution of energy in terms of wavelength by making the subsittion <span class="math notranslate nohighlight">\(\lambda = \frac{c}{\nu}\)</span> obtaining:</p>
+<ul class="simple">
+<li><p>You can also express distribution of energy in terms of wavelength by making the subsittion <span class="math notranslate nohighlight">\(\lambda = \frac{c}{\nu}\)</span> obtaining:</p></li>
+</ul>
 <div class="math notranslate nohighlight">
 \[ \rho_{\lambda}(T) = \frac{8 \pi hc}{\lambda^5} \cdot \Big[ \frac{1}{e^{\frac{hc}{\lambda kT}} - 1}\Big]\]</div>
 <ul class="simple">
