deploy: cb51f4272263dd712ed8fa132fee7a60c149242d

--- a/ch01/note02.html
+++ b/ch01/note02.html
@@ -605,7 +605,7 @@ $<span class="math notranslate nohighlight">\(\langle E\rangle = k_BT\)</span>$<
 <ul class="simple">
 <li><p>Unit of Planck’s constant, <span class="math notranslate nohighlight">\(h = 6.63 10^{–34} J \cdot s\)</span></p></li>
 <li><p>Unit of frequency <span class="math notranslate nohighlight">\(\nu\)</span>, <span class="math notranslate nohighlight">\(1 s^{-1}\)</span>.</p></li>
-<li><p>Unit of frequency <span class="math notranslate nohighlight">\(\nu\)</span>, <span class="math notranslate nohighlight">\(1 J\)</span>.</p></li>
+<li><p>Unit of Energy <span class="math notranslate nohighlight">\(E\)</span>, <span class="math notranslate nohighlight">\(1 J\)</span>.</p></li>
 </ul>
 </div>
 <ul class="simple">
