deploy: 8d5ba6cbee401ac9169a20525d43ecc1aa1ce251

--- a/ch01/note03.html
+++ b/ch01/note03.html
@@ -560,6 +560,39 @@ document.write(`
 </div>
 <hr class="docutils" />
 <div class="note admonition">
+<p class="admonition-title"><strong>Problem 2: Maximum Kinetic Energy of Photoelectrons</strong></p>
+<p>Ultraviolet light with a wavelength of 250 nm is incident on a metal surface with a work function of 3.0 eV. Calculate the maximum kinetic energy of the emitted photoelectrons.</p>
+<div class="dropdown admonition">
+<p class="admonition-title"><strong>Solution:</strong></p>
+<p>First, calculate the energy of the incident photons:</p>
+<div class="math notranslate nohighlight">
+\[
+E_{\text{photon}} = \frac{hc}{\lambda}
+\]</div>
+<p>Where:</p>
+<ul class="simple">
+<li><p><span class="math notranslate nohighlight">\(h = 6.626 \times 10^{-34} \, \text{J} \cdot \text{s}\)</span></p></li>
+<li><p><span class="math notranslate nohighlight">\(c = 3.00 \times 10^8 \, \text{m/s}\)</span></p></li>
+<li><p><span class="math notranslate nohighlight">\(\lambda = 250 \, \text{nm} = 250 \times 10^{-9} \, \text{m}\)</span></p></li>
+</ul>
+<div class="math notranslate nohighlight">
+\[
+E_{\text{photon}} = \frac{6.626 \times 10^{-34} \times 3.00 \times 10^8}{250 \times 10^{-9}} \, \text{J} = 7.95 \times 10^{-19} \, \text{J}
+\]</div>
+<p>Convert this energy to eV:</p>
+<div class="math notranslate nohighlight">
+\[
+E_{\text{photon}} = \frac{7.95 \times 10^{-19} \, \text{J}}{1.602 \times 10^{-19} \, \text{J/eV}} \approx 4.96 \, \text{eV}
+\]</div>
+<p>The maximum kinetic energy <span class="math notranslate nohighlight">\(K_{\text{max}}\)</span> of the emitted photoelectrons is given by:</p>
+<div class="math notranslate nohighlight">
+\[
+K_{\text{max}} = E_{\text{photon}} - \phi = 4.96 \, \text{eV} - 3.0 \, \text{eV} = 1.96 \, \text{eV}
+\]</div>
+</div>
+</div>
+<hr class="docutils" />
+<div class="note admonition">
 <p class="admonition-title"><strong>Problem 3: Photoelectric Current and Light Intensity</strong>  </p>
 <p>Explain how the intensity of incident light affects the photoelectric current, assuming the frequency of the light is above the threshold frequency.</p>
 <div class="dropdown admonition">
