--- a/ch01/note02.html
+++ b/ch01/note02.html
@@ -570,7 +570,7 @@ document.write(`
 <li><p><strong>Packing wave modes in a box</strong> One can fit more of high fequency (short wavelength) waves in the box than small frequency ones. The number of waves we can fit in a cubic box in the frequency region <span class="math notranslate nohighlight">\([\nu, \nu+d\nu]\)</span> can be estimated to be <span class="math notranslate nohighlight">\(\sim d \nu^3 \sim \nu^2 d\nu\)</span>. Constant of proportionality requires a few more steps to derive which we skip and write final result:</p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[dN_{\nu }= \frac{8\pi}{c^3}\cdot nu^2 d\nu\]</div>
+\[dN_{\nu }= \frac{8\pi}{c^3}\cdot \nu^2 d\nu\]</div>
 <ul class="simple">
 <li><p><strong>Equipartition of energy</strong> From thermodynamics we know that in equilibrium each degree of freedom or each oscillator gets the same <span class="math notranslate nohighlight">\(k_BT\)</span> of energy where <span class="math notranslate nohighlight">\(k_B\)</span> is the Boltzman’s constant.
 $<span class="math notranslate nohighlight">\(\langle E\rangle = k_BT\)</span>$</p></li>
