deploy: 4b42581e4b2e3253c5351e72be5cd636f7c0a311

--- a/ch01/note02.html
+++ b/ch01/note02.html
@@ -617,8 +617,8 @@ $<span class="math notranslate nohighlight">\(\langle E\rangle = k_BT\)</span>$<
 </ul>
 </div>
 <ul class="simple">
-<li><p>This means atoms and molecules absorb and emit radiation in discrete quantities, multiples of <span class="math notranslate nohighlight">\(h\nu\)</span>, which are called quanta! <span class="math notranslate nohighlight">\(E_1, E_2,E_3 …\)</span></p></li>
-<li><p>When light is emitted or absorbed, the atom or molecule jumps from one state to another and the energy difference <span class="math notranslate nohighlight">\(h\nu = E_n - E_m\)</span> is either coming from light or is used to generate light.</p></li>
+<li><p>This means atoms and molecules absorb and emit radiation in discrete quantities, multiples of <span class="math notranslate nohighlight">\(h\nu\)</span>, which are called quanta!</p></li>
+<li><p>When light is emitted or absorbed, the atom or molecule jumps from one state to another and the energy difference <span class="math notranslate nohighlight">\(h\nu\)</span> is either coming from light or is used to generate light.</p></li>
 <li><p>Note how small <span class="math notranslate nohighlight">\(h\)</span> is in the macroscopic units (such as J s). This is why quantization of energy is hardly noticeable and classical mechanics works so well at the macro scale. In the limit <span class="math notranslate nohighlight">\(h \rightarrow 0\)</span>, <span class="math notranslate nohighlight">\(E\)</span> becomes continuous, and an arbitrary real value of E is allowed. This is the classical limit.</p></li>
 </ul>
 </section>
