deploy: 6ae5677d6d4ad2ffcb9d67d93ab0dc3c93d60131

--- a/ch01/note02.html
+++ b/ch01/note02.html
@@ -580,8 +580,11 @@ document.write(`
 <div class="math notranslate nohighlight">
 \[dN_{\nu }= \frac{8\pi}{c^3}\cdot \nu^2 d\nu\]</div>
 <ul class="simple">
-<li><p><strong>Equipartition of energy</strong> From thermodynamics we know that in equilibrium each degree of freedom or each oscillator gets the same <span class="math notranslate nohighlight">\(k_BT\)</span> of energy where <span class="math notranslate nohighlight">\(k_B\)</span> is the Boltzman’s constant.
-$<span class="math notranslate nohighlight">\(\langle E\rangle = k_BT\)</span>$</p></li>
+<li><p><strong>Equipartition of energy</strong> From thermodynamics we know that in equilibrium each degree of freedom or each oscillator gets the same <span class="math notranslate nohighlight">\(k_BT\)</span> of energy where <span class="math notranslate nohighlight">\(k_B\)</span> is the Boltzman’s constant.</p></li>
+</ul>
+<div class="math notranslate nohighlight">
+\[\langle E\rangle = k_BT\]</div>
+<ul class="simple">
 <li><p>Every vibrating spring in heated body thus has same energy regardless of frequency, think about this assumption for a sec!</p></li>
 <li><p><strong>Radiation Energy Distribution:</strong> Distribution of radiated frequencies is then product of average thermal energy and number of springs in a frequency interval</p></li>
 </ul>
