deploy: 18a885c24e80c693d7e4cbecd6cbfa455b66f528

--- a/ch01/note02.html
+++ b/ch01/note02.html
@@ -670,22 +670,27 @@ For the geometric series of the form:</p>
 <p>This is Planck’s law, which describes the spectral density of radiation emitted by a black body in thermal equilibrium at a temperature <span class="math notranslate nohighlight">\(T\)</span>.</p>
 </div>
 <ul class="simple">
-<li><p>Assuming that the energy of an oscillator is quantized, Planck showed that the correct thermodynamic relation for the average energy is</p></li>
+<li><p>Assuming that the energy of an oscillator is quantized, Planck dervied a new expression for average energy which now depends on frequency of oscillations unlike classical expression of <span class="math notranslate nohighlight">\(k_BT\)</span></p></li>
 </ul>
 <div class="math notranslate nohighlight">
 \[\langle E \rangle = \Big[ \frac{1}{e^{\frac{h\nu}{ kT}} - 1}\Big] \]</div>
 <ul class="simple">
-<li><p>Instead of uniform value <span class="math notranslate nohighlight">\(kT\)</span> given by classical mechanics we end up with  distirbution of oscillator energies which tends to zero in the high frequency limit. Thus Planck’s expression resolves ultraviolet catastrophe!</p></li>
+<li><p>With this expression we end up with a distirbution of oscillator energies which tends to zero in the high frequency limit.</p></li>
 </ul>
 <div class="math notranslate nohighlight">
 \[ \rho_{\nu}(T) = \frac{8\pi \nu^2}{c^3} \cdot \Big[\frac{1}{e^{\frac{h\nu}{kT}} - 1} \Big]\]</div>
 <ul class="simple">
-<li><p>You can also express distribution of energy in terms of wavelength by making the subsittion <span class="math notranslate nohighlight">\(\lambda = \frac{c}{\nu}\)</span> obtaining:</p></li>
+<li><p>You can also express distribution in terms of wavelength by making the subsittion <span class="math notranslate nohighlight">\(\nu = c/\lambda\)</span>. Here</p></li>
 </ul>
 <div class="math notranslate nohighlight">
 \[ \rho_{\lambda}(T) = \frac{8 \pi hc}{\lambda^5} \cdot \Big[ \frac{1}{e^{\frac{hc}{\lambda kT}} - 1}\Big]\]</div>
 <ul class="simple">
-<li><p>The expressions for <span class="math notranslate nohighlight">\(\rho_{\lambda}(T)d\lambda\)</span> or <span class="math notranslate nohighlight">\(\rho_{\nu}(T)d\nu\)</span> have units of energy per volume which is why they are often referred as <strong>energy density</strong> of radiation. By integrating over the entire spectrum (e.g all wavelengths) one can obtain the total energy of radiation per volume!</p></li>
+<li><p>The expressions for <span class="math notranslate nohighlight">\(\rho_{\lambda}(T)d\lambda\)</span> or <span class="math notranslate nohighlight">\(\rho_{\nu}(T)d\nu\)</span> have units of energy per volume which is why they are often referred as <strong>energy density</strong> of radiation. By integrating over the entire spectrum (e.g all frequences or wavelengths) we obtain the total energy of radiation per volume!</p></li>
+</ul>
+<div class="math notranslate nohighlight">
+\[\int^{\infty}_0 \rho_{\nu}(T)d\nu = \sigma T^4 \]</div>
+<ul class="simple">
+<li><p><span class="math notranslate nohighlight">\(\sigma=5.6697 \cdot 10^{-8} J m^{-2} K^{-4} s^{-1}\)</span> is called Stefan-Boltzmann constat.</p></li>
 </ul>
 <blockquote>
 <div><p>In some books you may also find black body radiation characterized via the radiation flux which is a radiation measured per unit wavelength and per unit solid angle <span class="math notranslate nohighlight">\(B_{\lambda} = \frac{c}{4\pi}  \cdot \rho_{\lambda}\)</span></p>
@@ -699,7 +704,7 @@ For the geometric series of the form:</p>
 <div class="math notranslate nohighlight">
 \[\lambda_{max} = \frac{b}{T}\]</div>
 <ul class="simple">
-<li><p>Where <span class="math notranslate nohighlight">\( b=2.8977729 \cdot 10^{-3} m·K\)</span> is called Wien’s displacement constant.</p></li>
+<li><p><span class="math notranslate nohighlight">\( b=2.8977729 \cdot 10^{-3} m·K\)</span> is called Wien’s displacement constant.</p></li>
 </ul>
 </section>
 <section id="explore-black-body-radiation">
