deploy: 904aa86f77cdfaeb842e4c5a7bce46366ebf8ff0

--- a/ch01/note03.html
+++ b/ch01/note03.html
@@ -460,8 +460,8 @@ document.write(`
 <ul class="simple">
 <li><p><strong>Photoelectric effect</strong> Electrons are ejected when surface of a material is subjected to radiation exceeding a certain threshold frequency.</p></li>
 <li><p>Below the threshold fequency no electrons are ejected regardless of intensity of light (brightness)</p></li>
-<li><p>Photoelectric effect is impossible to explain classically because energy in Classical Mechanics is thought to only grows with intensity of light.</p></li>
-<li><p>In QM radiation just like matter is quantized. Radiation can be viewed as a stream of photons: a tiny and discrete packets of energy.</p></li>
+<li><p>Photoelectric effect is impossible to explain classically because energy in Classical Mechanics energy is thought to only grows with intensity of light.</p></li>
+<li><p>In QM energy of radiation just like matter is quantized. Radiation can be viewed as a stream of photons: a tiny and discrete packets of energy.</p></li>
 <li><p>One photon can eject one electron only if it has sufficient energy. Any extra energy gets converted into kinetic energy resulting in electrons flying faster.</p></li>
 <li><p>Photons with insufficent energy scatters of the electron</p></li>
 <li><p>High intensity light meaning lots of photons per unit area per unit time are unable to eject a single electron</p></li>
