deploy: 89da5abc732aac25e2918c2fc70db105e2a92c7b

--- a/ch01/note04.html
+++ b/ch01/note04.html
@@ -499,12 +499,17 @@ In other words, the energies of atoms are quantized.</p></li>
 <div class="math notranslate nohighlight">
 \[v = 8.2202\times10^{14}\left(1-\frac{4}{n^2}\right)\]</div>
 <p>where <span class="math notranslate nohighlight">\(n=3,4,5,...\)</span>.  Later, Johannes Rydberg generalized this formula to account for the entire hydrogen atom spectrum yielding the Rydberg formula</p>
+<div class="important admonition">
+<p class="admonition-title"><strong>Rydberg formula</strong></p>
 <div class="math notranslate nohighlight">
 \[\tilde{v} = R_H\left(\frac{1}{n_1^2}-\frac{1}{n_2^2}\right)\]</div>
 <p>where</p>
 <ul class="simple">
 <li><p><span class="math notranslate nohighlight">\(R_H = 109677.581\)</span> cm<span class="math notranslate nohighlight">\(^{-1}\)</span> is the Rydberg constant</p></li>
 <li><p><span class="math notranslate nohighlight">\(n_1 = 1,2,3,...\)</span>, and <span class="math notranslate nohighlight">\(n_2 = n_1+1,n_1+2,...\)</span>.</p></li>
+</ul>
+</div>
+<ul class="simple">
 <li><p>While these equations fit the hydrogen atom spectrum nicely, they do not prescribe any physics to the system.  They do not present a model of the hydrogen atom but rather a heuristic equation that fits the data.  Nonetheless, scientists were perplexed by the presence of the integers <span class="math notranslate nohighlight">\(n_1\)</span> and <span class="math notranslate nohighlight">\(n_2\)</span>.</p></li>
 </ul>
 <figure class="align-default" id="id2">
@@ -592,8 +597,7 @@ E(r) &amp;= \frac{1}{2}\frac{e^2}{4\pi\varepsilon_0r} - \frac{e^2}{4\pi\varepsil
     &amp;= -\frac{m_ee^4}{32\pi^2\varepsilon_0\hbar^2}\frac{1}{n^2} \\
     &amp;= -\frac{m_ee^4}{8\varepsilon_0^2h^2}\frac{1}{n^2} \quad n=1,2,3,...
 \end{align}\end{split}\]</div>
-<p>where I plugged in the quantized values for <span class="math notranslate nohighlight">\(r\)</span> derived from the for balance relationship.</p>
-<p>Taking differences in energy between two energy levels, <span class="math notranslate nohighlight">\(n_1\)</span> and <span class="math notranslate nohighlight">\(n_2&gt;n_1\)</span>, yields</p>
+<p>where I plugged in the quantized values for <span class="math notranslate nohighlight">\(r\)</span> derived from the for balance relationship.   Taking differences in energy between two energy levels, <span class="math notranslate nohighlight">\(n_1\)</span> and <span class="math notranslate nohighlight">\(n_2&gt;n_1\)</span>, yields</p>
 <div class="math notranslate nohighlight">
 \[\begin{equation}
 \Delta E = \frac{m_ee^4}{8\varepsilon_0^2h^2}\left(\frac{1}{n_1^2} - \frac{1}{n_2^2}\right)
