deploy: 296fb738dd81e541a89d034e95f0bc72b8dc8995

--- a/ch01/note04.html
+++ b/ch01/note04.html
@@ -505,7 +505,7 @@ In other words, the energies of atoms are quantized.</p></li>
 \[\tilde{v} = R_H\left(\frac{1}{n_1^2}-\frac{1}{n_2^2}\right)\]</div>
 <p>where</p>
 <ul class="simple">
-<li><p><span class="math notranslate nohighlight">\(R_H = 109677.581\)</span> cm<span class="math notranslate nohighlight">\(^{-1}\)</span> is the Rydberg constant</p></li>
+<li><p><span class="math notranslate nohighlight">\(R_H = 1.097 \times 10^7 \ \text{m}^{-1}\)</span> is the Rydberg constant.</p></li>
 <li><p><span class="math notranslate nohighlight">\(n_1 = 1,2,3,...\)</span>, and <span class="math notranslate nohighlight">\(n_2 = n_1+1,n_1+2,...\)</span>.</p></li>
 </ul>
 </div>
