--- a/math/note03.html
+++ b/math/note03.html
@@ -562,13 +562,53 @@ When you multiply a complex number by its conjugate, <span class="math notransla
 </div>
 <div class="tip dropdown admonition">
 <p class="admonition-title"><strong>Proof Euler’s formula</strong></p>
-<p>One way to prove eulers formula is by carrying out taylor expanssion of sin and cosine and separately then sum them to show they add up to Taylor expansion of exp function</p>
-<div class="math notranslate nohighlight">
-\[sin(x) = x-\frac{1}{3!}x^3+\frac{1}{5!}x^5+...\]</div>
-<div class="math notranslate nohighlight">
-\[cos(x) = 1-\frac{1}{2!}x^2+\frac{1}{4!}x^4+...\]</div>
-<div class="math notranslate nohighlight">
-\[exp(x) = 1+x+\frac{1}{2!}x^2+\frac{1}{3}x^3+...\]</div>
+<p>Euler’s formula states:
+$<span class="math notranslate nohighlight">\(
+e^{i\phi} = \cos\phi + i\sin\phi
+\)</span>$
+We will prove this by using the Taylor series expansions of the exponential function, cosine, and sine.</p>
+<p><strong>Step 1: Taylor Series Expansion of <span class="math notranslate nohighlight">\(e^x\)</span></strong></p>
+<p>The Taylor series expansion of <span class="math notranslate nohighlight">\(e^x\)</span> around <span class="math notranslate nohighlight">\(x = 0\)</span> is:
+$<span class="math notranslate nohighlight">\(
+e^x = 1 + x + \frac{x^2}{2!} + \frac{x^3}{3!} + \frac{x^4}{4!} + \cdots
+\)</span><span class="math notranslate nohighlight">\(
+For \)</span>e^{i\phi}<span class="math notranslate nohighlight">\(, substitute \)</span>x = i\phi<span class="math notranslate nohighlight">\( into the series:
+\)</span><span class="math notranslate nohighlight">\(
+e^{i\phi} = 1 + i\phi + \frac{(i\phi)^2}{2!} + \frac{(i\phi)^3}{3!} + \frac{(i\phi)^4}{4!} + \cdots
+\)</span>$</p>
+<p><strong>Step 2: Simplifying Powers of <span class="math notranslate nohighlight">\(i\)</span></strong>
+We know that powers of <span class="math notranslate nohighlight">\(i\)</span> cycle as follows:
+$<span class="math notranslate nohighlight">\(
+i^1 = i, \quad i^2 = -1, \quad i^3 = -i, \quad i^4 = 1, \quad \text{and so on}.
+\)</span><span class="math notranslate nohighlight">\(
+Using these identities, we simplify each term in the series:
+\)</span><span class="math notranslate nohighlight">\(
+e^{i\phi} = 1 + i\phi - \frac{\phi^2}{2!} - i\frac{\phi^3}{3!} + \frac{\phi^4}{4!} + i\frac{\phi^5}{5!} - \cdots
+\)</span>$</p>
+<p><strong>Step 3: Grouping Real and Imaginary Terms</strong>
+Now, we group the real and imaginary terms separately:
+$<span class="math notranslate nohighlight">\(
+e^{i\phi} = \left(1 - \frac{\phi^2}{2!} + \frac{\phi^4}{4!} - \cdots\right) + i\left(\phi - \frac{\phi^3}{3!} + \frac{\phi^5}{5!} - \cdots\right)
+\)</span>$</p>
+<p><strong>Step 4: Recognizing Taylor Series for <span class="math notranslate nohighlight">\(\cos\phi\)</span> and <span class="math notranslate nohighlight">\(\sin\phi\)</span></strong></p>
+<p>The Taylor series for <span class="math notranslate nohighlight">\(\cos\phi\)</span> is:
+$<span class="math notranslate nohighlight">\(
+\cos\phi = 1 - \frac{\phi^2}{2!} + \frac{\phi^4}{4!} - \cdots
+\)</span><span class="math notranslate nohighlight">\(
+And the Taylor series for \)</span>\sin\phi<span class="math notranslate nohighlight">\( is:
+\)</span><span class="math notranslate nohighlight">\(
+\sin\phi = \phi - \frac{\phi^3}{3!} + \frac{\phi^5}{5!} - \cdots
+\)</span>$</p>
+<p><strong>Step 5: Substituting the Series Back</strong>
+We see that the real part of the series matches <span class="math notranslate nohighlight">\(\cos\phi\)</span>, and the imaginary part matches <span class="math notranslate nohighlight">\(i\sin\phi\)</span>. Therefore:
+$<span class="math notranslate nohighlight">\(
+e^{i\phi} = \cos\phi + i\sin\phi
+\)</span>$</p>
+<p><strong>Conclusion</strong>
+This completes the proof of Euler’s formula:
+$<span class="math notranslate nohighlight">\(
+e^{i\phi} = \cos\phi + i\sin\phi
+\)</span>$</p>
 </div>
 <div class="warning admonition">
 <p class="admonition-title"><strong>Polar Representation</strong></p>
